--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,73 @@ a:active {
 	text-decoration: none;
 }
 
+@media (max-width: 350px) {
+	.navbar-brand {width: 150px;}
+}
+@media (max-width: 992px) {
+	.navbar-brand {margin-bottom: 0;}
+	.navbar-header {float: none; height: 100px;border-bottom: 0px solid #002ba6;}
+	.navbar-toggle {display: block;}
+	.navbar-toggle {margin: 15px; padding: 19px 15px; border: 0px;background-color: var(--green); border-radius: 0;}
+	.navbar-default .navbar-toggle .icon-bar {background-color:#fff;}
+	.navbar-collapse.collapse {display: none!important;height: 100% !important;}
+	.navbar-collapse.collapse.in {transition: 1s all ease;display: block!important; right: 0;position: fixed; z-index: 99999999999;background-color: var(--green);top: 80px;}
+	.collapsing {transition: 1s all ease;overflow: hidden!important;right: -300px; position: absolute; z-index: 999;background-color: green;}
+	.navbar-nav {float: none!important;margin: 7.5px 15px;}
+	.navbar-nav>li {float: none;}
+	.navbar-nav>li>a {padding-top: 10px;padding-bottom: 10px;}
+	.navbar-text {float: none;margin: 15px 0;}
+	.navbar-brand {height: 60px;}
+	.navbar-brand img {position: static;}
+	.contactanos {transform: none !important; padding: 0;}
+	.navbar-collapse {padding: 0 !important;}
+	.navbar {overflow: visible !important;}
+	.navbar-default .navbar-nav>li>a {
+		color: #fff !important;
+	}
+	.navbar-fixed-top .navbar-collapse {max-height: 100% !important;}
+	.navbar-default .navbar-nav>li>a:focus,
+	.navbar-default .navbar-nav>li>a:hover {
+		background-color: rgba(0,0,0,.5) !important;
+		color: #FFF;
+	}
+	.collapse ul {
+		margin: 90px 0 !important;
+	}
+	.navbar-default .navbar-nav>.active>a,
+	.navbar-default .navbar-nav>.active>a:focus,
+	.navbar-default .navbar-nav>.active>a:hover {
+		background-color: rgba(0,0,0,.5) !important;
+		color: #FFF;
+		font-weight: bold;
+	}
+	.contactanos p,
+	.contactanos h4,
+	.contactanos img {transform: none !important;}
+}
+
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+	background-color: var(--green);
+}
+
+.navbar {max-height: 80px;overflow: hidden;}
+.navbar {margin-bottom: 0;}
+.navbar-brand {padding: 0 15px;}
+.navbar-brand img {margin-top: 3px;max-height: 65px; filter: invert(48%) sepia(18%) saturate(1849%) hue-rotate(55deg) brightness(91%) contrast(82%);}
+.collapse {position: relative;right: -3%;}
+.collapse ul {margin: 10px 0;}
+.navbar-default .navbar-nav>li {margin-top: .5rem;}
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
+	background-color: var(--light-green);
+}
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+	background-color: var(--light-green);
+}
+.navbar-default .navbar-nav>li>a {color: #000;}
 body {
 	font-family: 'Poppins', sans-serif;
 }
@@ -29,7 +96,10 @@ body {
 }
 
 nav {
-	overflow: hidden;
+	/*overflow: hidden;*/
+	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;
+	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;
+	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;
 }
 
 .nav__content {
@@ -38,7 +108,7 @@ nav {
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	justify-content: space-between;
 	max-height: 120px;
 	align-items: center;
@@ -47,58 +117,65 @@ nav {
 .nav__content a img {
 	position: absolute;
 	bottom: -10px;
-	object-fit: contain;
+	object-fit: cover;
 	align-self: start;
 	margin-left: calc(100% / 12);
 	filter: invert(48%) sepia(18%) saturate(1849%) hue-rotate(55deg) brightness(91%) contrast(82%);
 }
 
+.nav__content ul {
+	text-align: right;
+	margin: 0;
+}
 .nav__content ul li {
-	padding: 3rem .5rem;
+	padding: 3rem 1rem;
 }
 
 .nav__content ul .active {
 	background-color: var(--light-green);
 	border-radius: 5px;
 }
-.nav__content ul {
-	margin: 0;
-}
 
 .contactanos {
-	width: 25%;
+	z-index: 999;
+	width: 250px;
 	background: linear-gradient(129deg, #71b920 0%, #488a25 70%);
 	display: grid;
 	grid-template-rows: 1fr 1fr;
 	grid-template-columns: 90px 1fr;
-	padding: 5rem 0;
-	transform: skew(15deg);
+	padding: 1rem 0;
+	transform: skew(25deg);
 	color: #FFF;
 }
 
 .contactanos__icon {
+	position: relative;
+	top: 10px;
 	grid-row: 1 / 3;
 	background-color: var(--green);
 	padding: 1rem;
 	width: 44px;
 	height: 44px;
-	align-self: center;
 	justify-self: center;
+}
+.contactanos__icon img {
+	transform: skew(-25deg);
 }
 
 .contactanos p,
-.contactanos h3 {
-	margin: 0;
-	transform: skew(-15deg);
+.contactanos h4 {
+	position: relative;
+	bottom: 10px;
+	margin: auto 0;
+	transform: skew(-25deg);
 }
 
-.contactanos h3 {
+.contactanos h4 {
 	grid-column: 2 / 3;
-	align-content: center;
 }
 .contactanos p {
 	margin-left: 5px;
-	align-self: end;
+	font-size: 1.2rem;
 }
 
 .hero {
@@ -109,7 +186,7 @@ nav {
 	background-blend-mode: soft-light;
 	background-repeat: no-repeat;
 	width: 130%;
-	height: 74vh;
+	height: 500px;
 	margin-left: 6%;
 	-moz-transform: skew(20deg, -4deg);
 	-webkit-transform: skew(20deg, -4deg);
@@ -129,6 +206,34 @@ nav {
 	}
 	.inner-hero h4 {
 		font-size: 2rem;
+	}
+}
+@media (max-width: 992px) {
+	.inner-hero {
+		position: absolute;
+		top: 45% !important;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+	.inner-hero button {
+		margin-top: 0 !important;
+	}
+	.article__one {
+		/*padding-top: 0 !important;*/
+	}
+}
+@media (max-width: 350px) {
+	.inner-hero h1 {
+		font-size: 22px;
+	}
+	.inner-hero h4 {
+		font-size: 16px;
+	}
+	.inner-hero button {
+		font-size: 12px;
+	}
+	.inner-hero {
+		top: 40% !important;
 	}
 }
 
@@ -192,7 +297,7 @@ nav {
 .article__one .article__img__content {
 	transform: rotateY(-10deg) skew(-20deg, 0deg);
 	position: absolute;
-	right: -20%;
+	right: -23%;
 	height: 80vh;
 
 }
@@ -208,12 +313,13 @@ nav {
 
 .article__img__content img {
 	border-radius: 3rem;
-	object-fit: contain;
+	/*object-fit: contain;*/
 	box-shadow: 0px 4px 5px grey;
 }
 
 .article__one .article__img__content img {
-	width: 80%;
+	width: 75%;
+	height: 150%;
 	transform-origin: bottom;
 	transform: rotateY(0deg) skew(20deg, 0deg);
 }
@@ -234,7 +340,56 @@ nav {
 	.articles article {
 		margin: 0 15rem !important;
 	}
+
 }
+@media (max-width: 992px) {
+	.article__one,.article__two {
+		flex-direction: column;
+		/*perspective: none;*/
+	}
+	.article__one {
+		padding-top: 0;
+	}
+	.article__two {
+		padding-bottom: 0;
+	}
+	.article__one article,.article__two article {
+		max-width: 100% !important;
+	}
+	.article__two article {
+		/*margin-top: 5rem !important;*/
+	}
+	.article__one .article__img__content {
+		position: relative;
+		right: -23%;
+	}
+	.articles .article__img__content {
+		width: 100%;
+	}
+	.article__one .article__img__content img{
+		width: 100%;
+		height: 100%;
+		/*object-fit: contain;*/
+	}
+	.articles article {
+		margin: 4rem 3rem !important;
+	}
+	.articles article p {
+		height: 100% !important;
+		margin-bottom: 5rem;
+	}
+	.articles article h1 {
+		text-align: center;
+	}
+	.patch-img {
+		left: -80vh;
+		top: 10%;
+	}
+	.article__two .article__img__content {
+		left: -23%;
+	}
+}
+
 .articles article {
 	max-width: 30%;
 	margin: 0 25rem;
@@ -308,7 +463,7 @@ nav {
 	padding: 5rem;
 }
 .skew-img {
-	width: 440px;
+	/*width: 440px;*/
 	transform: skew(-5deg, 0deg);
 	align-self: center;
 	overflow: hidden;
@@ -322,20 +477,49 @@ nav {
 	transform: skew(5deg, 0deg);
 	max-height: 300px;
 }
-/*.select-options {
-	width: 120%;
-}*/
+@media (max-width: 992px) {
+	.article__1 {flex-direction: column;}
+	.skew-img {width: auto !important;}
+	.article-img {
+		max-width: 100%;
+		padding: 0 ;
+		margin: 0 auto;
+	}
+	.the_article {
+		padding: 4rem 0;
+		text-align: center;
+	}
+	.skew_container .bg-skew {padding-top: 0;}
+	.skew_container .bg-skew .inner-skew {
+		width: 90%;
+	}
+	.tipos h1 {font-size: 27px;}
+	.select-options {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.skew_container .bg-skew {
+		padding-top: 0;margin-top: 0;
+	}
+}
+@media (max-width: 800px) {
+	.select-options button {
+		width: 40%;
+	}
+}
+
 .select-options button {
 	background-color: #FFF;
 	margin: 0 1rem;
 	border: solid .1px green;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
-@media (max-width: 1300px) {
-	.select-options button {
-		margin: 0 .2rem ;
-	}
-	.select-options {
-		width: 120%;
+@media (min-width: 515px) and (max-width: 992px) {
+	.article-img {
+		width: 440px !important;
 	}
 }
 
@@ -369,6 +553,32 @@ nav {
 	/*align-items: center;*/
 	justify-content: center;
 }
+@media (max-width: 995px) {
+	.install {
+		/*height: 20% !important;*/
+		flex-direction: column;
+		margin-bottom: 4rem;
+	}
+	.install img {
+		width: 90%;
+		height: 375px !important;
+		object-fit: cover;
+	}
+	.install__article {
+		width: 90%;
+		margin-left: 0;
+		margin-top: 4rem;
+	}
+}
+@media (min-width: 515px) and (max-width: 992px) {
+	.install img {
+		width: 70%;
+	}
+	.install__article {
+		width: 70%;
+	}
+}
+
 .slider-plants {
 	width: 100%;
 	display: -webkit-box;
@@ -438,13 +648,39 @@ nav {
 	display: -ms-flexbox;
 	display: flex;
 	align-items: center;
-
 }
 .info__content button {
 	border: none;
 	color: green;
 	padding: 1rem 2rem;
 	border-radius: .5rem;
+}
+.info__content a,.info__content a:visited {
+	color: #FFF;
+}
+.info__content ul li a div {
+	display: inline-block;
+}
+@media (max-width: 900px) {
+	.info-section {
+		height: 100%;
+		padding: 3rem;
+	}
+	.info__content {
+		/*margin: 2rem 0;*/
+		width: 90% !important;
+		flex-direction: column;
+	}
+	.info__content-datos {
+		flex-direction: column;
+	}
+	.info__content ul {
+		margin-bottom: 1rem;
+		margin-right: 0;
+	}
+	.info__content ul li a div {
+		display: inline-block;
+	}
 }
 footer {
 	background-color: darkgreen;
@@ -477,9 +713,20 @@ footer .footer__content .copyright {
 .footer__content .copyright p{
 	margin: 0 1rem;
 }
-footer a {
+footer a, footer a:hover,footer a:visited {
 	color: #fff;
 }
-footer a:active {
-
+@media (max-width: 900px) {
+	.footer__content{
+		flex-direction: column;
+	}
+	.footer__info {
+		border-top: #FFF solid 1px;
+		font-size: 1.1rem;
+		text-align: center;
+	}
+	footer .footer__content .copyright {
+		flex-direction: column;
+		text-align: center;
+	}
 }
