--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ a:link,
 a:active {
 	text-decoration: none;
 }
+header {
+	/*z-index: 99999999999999999999999999999999999999999999999999999999;*/
+
+}
 
 @media (max-width: 350px) {
 	.navbar-brand {width: 150px;}
@@ -28,8 +32,8 @@ a:active {
 	.navbar-toggle {margin: 15px; padding: 19px 15px; border: 0px;background-color: var(--green); border-radius: 0;}
 	.navbar-default .navbar-toggle .icon-bar {background-color:#fff;}
 	.navbar-collapse.collapse {display: none!important;height: 100% !important;}
-	.navbar-collapse.collapse.in {transition: 1s all ease;display: block!important; right: 0;position: fixed; z-index: 99999999999;background-color: var(--green);top: 80px;}
-	.collapsing {transition: 1s all ease;overflow: hidden!important;right: -300px; position: absolute; z-index: 999;background-color: green;}
+	.navbar-collapse.collapse.in {transition: 1s all ease;display: block!important; right: 0;position: fixed; z-index: 9999;background-color: var(--green);top: 80px;}
+	.collapsing {transition: 1s all ease;overflow: hidden!important;right: -300px; position: absolute;}
 	.navbar-nav {float: none!important;margin: 7.5px 15px;}
 	.navbar-nav>li {float: none;}
 	.navbar-nav>li>a {padding-top: 10px;padding-bottom: 10px;}
@@ -72,7 +76,7 @@ a:active {
 .navbar {margin-bottom: 0;}
 .navbar-brand {padding: 0 15px;}
 .navbar-brand img {margin-top: 3px;max-height: 65px; filter: invert(48%) sepia(18%) saturate(1849%) hue-rotate(55deg) brightness(91%) contrast(82%);}
-.collapse {position: relative;right: -3%;}
+.collapse {position: relative;right: -20px;}
 .collapse ul {margin: 10px 0;}
 .navbar-default .navbar-nav>li {margin-top: .5rem;}
 .navbar-default .navbar-nav>li>a:focus,
@@ -152,7 +156,7 @@ nav {
 	position: relative;
 	top: 10px;
 	grid-row: 1 / 3;
-	background-color: var(--green);
+	background-color: #AED984;
 	/*background-color: ;*/
 	padding: 1rem;
 	width: 44px;
@@ -179,30 +183,97 @@ nav {
 	font-size: 1.2rem;
 }
 
-.hero {
+
+/*________________________________________*/
+.section__hero {
+	/*height: 1605px;*/
+	overflow: hidden;
+	background: var(--light-green);
+	padding-bottom: 10rem;
+
+}
+/*.hero {*/
+.hero--skew {
+	/*z-index: 999;*/
+	/*position: absolute;*/
 	position: relative;
 	top: -60px;
+	width: 110%;
+	height: 650px;
+	/*height: 800px;*/
+	/*height: calc(100% - 100px);*/
+	/*height: 1605px;*/
+	margin-left: 12%;
+	transform: skew(30deg, -5deg);
+	border-radius: 4rem;
+	overflow: hidden;
+	border: 1px solid black;
+}
+.hero__img {
+	height: 100%;
+	/*width: 200%;*/
+	transform-origin: top left;
+	transform: skew(-30deg, 5deg);
 	background-image: url(images/recursos/o_1fkhkt0sol311l3b11pn1s4u847a.jpeg);
 	background-color: var(--green);
 	background-blend-mode: soft-light;
 	background-repeat: no-repeat;
-	background-position: -226px 75px;
-	width: 130%;
-	height: 500px;
-	margin-left: 6%;
-	-moz-transform: skew(20deg, -4deg);
-	-webkit-transform: skew(20deg, -4deg);
-	-o-transform: skew(20deg, -4deg);
-	-ms-transform: skew(20deg, -4deg);
-	transform: skew(20deg, -4deg);
-	border-radius: 4rem;
+	/*background-clip: padding-box;*/
+	background-position: -120px;
+	background-size: 100% 100%;
+}
+.inner-hero {
+	color: #fff;
+	position: absolute;
+	top: 50% ;
+	/*top: calc(50% - 150px);*/
+	left: 55%;
+	/*left: calc(40% - 10px);*/
+	transform: translate(-50%, -50%);
 }
 .inner-hero h1 {
-	font-weight: 600;
+	white-space: nowrap;
+	/*width: 100%;*/
+	/*width: 1167px;*/
+	/*height: 68px;*/
+	font-size: 60px;
+	/*line-height: 65px;*/
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Poppins";
+	filter: drop-shadow(1px 1.732px 1px rgba(0,0,0,0.75));
+}
+.inner-hero h4 {
+	/*width: 1170px;*/
+	/*height: 77px;*/
+	font-size: 34px;
+	/*line-height: 35px;*/
+	color: #ffffff;
+	font-weight: 500;
+	font-style: italic;
+	font-family: "Poppins";
+	filter: drop-shadow(1px 1.732px 1px rgba(0,0,0,0.75));
+}
+.inner-hero button {
+	font-size: 20px;
+	border: none;
+	color: green;
+	margin-top: 2rem;
+	width: 273px;
+	height: 69px;
+	border-radius: 4px;
+	background-color: #ffffff;
+}
+@media (min-width: 1550px) {
+	.inner-hero {
+		top: 40%;
+	}
 }
 @media (max-width: 1300px) {
+	.hero {
+
+	}
 	.inner-hero h1 {
-		/*font-weight: semibold !important;*/
 		font-weight: 600;
 		font-size: 2.7rem;
 	}
@@ -220,16 +291,13 @@ nav {
 	.inner-hero button {
 		margin-top: 0 !important;
 	}
-	.article__one {
-		/*padding-top: 0 !important;*/
-	}
 }
 @media (max-width: 350px) {
 	.inner-hero h1 {
 		font-size: 22px;
 	}
 	.inner-hero h4 {
-		font-size: 16px;
+		/*font-size: 16px;*/
 	}
 	.inner-hero button {
 		font-size: 12px;
@@ -239,27 +307,9 @@ nav {
 	}
 }
 
-.section__hero {
-	overflow: hidden;
-	background: var(--light-green);
-}
 
-.inner-hero {
-	color: #fff;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
 
-.inner-hero button {
-	border: none;
-	color: green;
-	padding: 1rem 2rem;
-	margin-top: 2rem;
-	border-radius: .5rem;
-}
-
+/*______________________________*/
 .articles {
 	overflow: hidden;
 }
@@ -297,7 +347,7 @@ nav {
 }
 
 .article__one .article__img__content {
-	transform: rotateY(-15deg) skew(-15deg, 0deg);
+	transform: rotateY(-10deg) skew(-20deg, -5deg);
 	position: absolute;
 	right: -20%;
 	/*height: 80vh;*/
@@ -305,7 +355,7 @@ nav {
 }
 
 .article__two .article__img__content {
-	transform: rotateY(15deg) skew(-15deg, 0deg);
+	transform: rotateY(10deg) skew(-20deg, -5deg);
 	position: relative;
 	left: -50px;
 	/*height: 500px;*/
@@ -315,20 +365,21 @@ nav {
 
 .article__img__content img {
 	border-radius: 3rem;
-	/*object-fit: contain;*/
 	box-shadow: 0px 4px 5px grey;
 }
 
 .article__one .article__img__content img {
+	object-fit: cover !important;
 	width: 75%;
 	height: 150%;
 	transform-origin: bottom;
-	transform: rotateY(15deg) skew(15deg, 0deg);
+	transform: rotateY(10deg) skew(20deg, 5deg);
 }
 
 .article__two .article__img__content img {
+	transform-origin: right;
 	width: 125%;
-	transform: rotateY(-15deg) skew(15deg, 0deg);
+	transform: rotateY(-10deg) skew(20deg, 5deg);
 }
 .patch-img {
 	position: absolute;
@@ -376,7 +427,7 @@ nav {
 	.article__one .article__img__content img{
 		width: 100%;
 		height: 100%;
-		/*object-fit: contain;*/
+		object-fit: contain;
 	}
 	.articles article {
 		margin: 4rem 3rem !important;
@@ -401,11 +452,16 @@ nav {
 	max-width: 30%;
 	margin: 0 25rem;
 }
+.articles article h1{
+
+}
 .articles article p {
+	width: 570px;
 	height: 275px;
 	color: #707070;
 	letter-spacing: 1px;
 	line-height: 28px;
+	font-weight: 400;
 }
 
 .articles button {
