--- a/styles.css
+++ b/styles.css
@@ -318,6 +318,7 @@ nav {
     top: -60px;
     width: 110%;
     height: 65rem;
+    /*height: 95rem;*/
     margin-left: 12%;
     transform: skew(30deg, -5deg);
     border-radius: 2rem;
@@ -418,6 +419,7 @@ nav {
         transform: none;
     }
 }
+@media (max-width: px)
 
 
 
@@ -437,8 +439,6 @@ nav {
 
 .article__one {
     perspective: 50rem;
-    /*overflow: hidden;*/
-    /*min-height: 400px;*/
     padding: 100px 0;
     background-color: var(--light-green);
 }
@@ -446,17 +446,14 @@ nav {
 .article__two {
     perspective: 50rem;
     padding: 150px 0;
-    /*min-height: 400px;*/
     margin-bottom: 100px;
-    /*overflow: hidden;*/
 }
 
-.article__two .articles .article__img__content {
-
+.article__onw .articles .article__img__content {
+    /*overflow: hidden;*/
 }
 .articles .article__img__content {
     overflow: hidden;
-    /*max-height: 300px;*/
     width: 50%;
     height: 450px;
     border-radius: 20px;
@@ -466,7 +463,6 @@ nav {
     transform: rotateY(-10deg) skew(-20deg, 0deg);
     position: absolute;
     right: -5%;
-    /*height: 80vh;*/
 
 }
 
@@ -502,93 +498,15 @@ nav {
     top: 25%;
 }
 
-@media (max-width: 1300px) {
-    .article__two .article__img__content {
-        /*height: 450px*/
-    }
-
-    .articles article {
-        margin: 0 15rem !important;
-    }
-
-    .article__one .article__img__content {
-        right: -25%;
-    }
-}
-
-@media (max-width: 992px) {
-
-    .article__one,
-    .article__two {
-        flex-direction: column;
-        /*perspective: none;*/
-    }
-
-    .articles .article__img__content {
-        height: 350px;
-    }
-
-    .article__one {
-        padding-top: 0;
-    }
-
-    .article__two {
-        padding-bottom: 0;
-    }
-
-    .article__one article,
-    .article__two article {
-        max-width: 100% !important;
-    }
-
-    .article__two article {
-        /*margin-top: 5rem !important;*/
-    }
-
-    .article__one .article__img__content {
-        position: relative;
-        right: -23%;
-    }
-
-    .articles .article__img__content {
-        width: 100%;
-    }
-
-    .article__one .article__img__content img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    .articles article {
-        margin: 4rem 3rem !important;
-    }
-
-    .articles article p {
-        height: 100% !important;
-        margin-bottom: 5rem;
-    }
-
-    .articles article h1 {
-        text-align: center;
-    }
-
-    .patch-img {
-        top: 10%;
-    }
-
-    .article__two .article__img__content {
-        left: -23%;
-    }
-}
-
 .articles article {
     max-width: 30%;
     margin: 0 25rem;
 }
 
 .articles article h1 {
-    height: 77px;
+    white-space: nowrap;
+    margin-bottom: 3rem;
+    /*height: 77px;*/
     font-size: 45px;
     line-height: 50px;
     color: #333333;
@@ -597,7 +515,7 @@ nav {
 }
 
 .articles article p {
-    width: 570px;
+    /*width: 570px;*/
     height: 275px;
     color: #6e6e6e;
     letter-spacing: 1px;
@@ -621,6 +539,87 @@ nav {
     font-size: 18px;
     line-height: 60px;
     font-weight: 500;
+}
+
+@media (max-width: 1300px) {
+    .articles article h1 {
+        font-size: 4rem;
+    }
+    .articles article {
+        margin: 0 15rem !important;
+    }
+    .article__one {
+        overflow: hidden;
+
+    }
+    .article__one .article__img__content {
+        right: -15%;
+    }
+}
+
+@media (max-width: 992px) {
+    .article__one,
+    .article__two {
+        flex-direction: column;
+    }
+    .articles .article__img__content {
+        height: 350px;
+    }
+    .article__one {
+        padding-top: 0;
+    }
+    .article__two {
+        padding-bottom: 0;
+    }
+    .article__one article,
+    .article__two article {
+        max-width: 100% !important;
+    }
+    .article__one .article__img__content {
+        position: relative;
+        right: -23%;
+    }
+    .articles .article__img__content {
+        width: 100%;
+    }
+    .article__one .article__img__content img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .articles article {
+        margin: 4rem 3rem !important;
+    }
+    .articles article p {
+        height: 100% !important;
+        margin-bottom: 5rem;
+    }
+    .articles article h1 {
+        font-size: 3.5rem;
+        text-align: center;
+    }
+    .patch-img {
+        top: 10%;
+    }
+    .article__two .article__img__content {
+        left: -23%;
+    }
+}
+@media (max-width: 612px) {
+    .article__two .article__img__content {
+        margin-bottom: 40%;
+    }
+    .articles article h1 {
+        font-size: 3.5rem;
+    }
+}
+@media (max-width: 392px) {
+    .articles article h1 {
+        white-space: normal;
+    }
+    .patch-img {
+        left: -450px;
+    }
 }
 
 .tipos {
@@ -657,7 +656,7 @@ nav {
     margin-top: -9%;
     /*margin-top: -20%;*/
     /*width: 300vh;*/
-    height: 125vh;
+    /*height: 125vh;*/
     transform: skewY(5deg);
     /*transform: skew(330deg, 330deg);*/
     /*transform: skew(60deg, 357deg);*/
@@ -677,19 +676,16 @@ nav {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    align-items: center;
 }
 
 .the_article {
     padding: 5rem 3rem;
 }
 
-.article__1 .the_article button {
-    padding: .7rem 3.5rem;
-    margin-top: 1rem;
-}
-
 .article__1 h3 {
-    width: 573px;
+    /*width: 573px;*/
+    /*white-space: nowrap;*/
     /*height: 115px;*/
     font-size: 40px;
     letter-spacing: -1px;
@@ -700,8 +696,8 @@ nav {
 }
 
 .article__1 p {
-    width: 571px;
-    height: 275px;
+    /*width: 571px;*/
+    /*height: 275px;*/
     font-size: 18px;
     letter-spacing: 1px;
     line-height: 28px;
@@ -794,6 +790,9 @@ nav {
         width: 40%;
     }
 }
+.select-options {
+    gap: 20px;
+}
 
 .select-options button {
     background-color: #FFF;
@@ -881,28 +880,17 @@ nav {
     }
 
     .install img {
-        width: 90%;
+        width: 100%;
         height: 375px !important;
         object-fit: cover;
     }
 
     .install__article {
-        width: 90%;
+        width: 100%;
         margin-left: 0;
         margin-top: 4rem;
     }
 }
-
-@media (min-width: 515px) and (max-width: 992px) {
-    .install img {
-        width: 70%;
-    }
-
-    .install__article {
-        width: 70%;
-    }
-}
-
 .slider-plants {
     background-color: #f0eeee;
     width: 100%;
