--- a/styles.css
+++ b/styles.css
@@ -19,136 +19,8 @@ a:active {
     text-decoration: none;
 }
 
-@media (max-width: 350px) {
-    .navbar-brand {
-        width: 150px;
-    }
-}
-
-@media (max-width: 992px) {
-    .navbar-brand {
-        margin-bottom: 0;
-    }
-
-    .navbar-header {
-        float: none;
-        /*border-bottom: 0px solid #002ba6;*/
-    }
-
-    .navbar-toggle {
-        display: block;
-    }
-
-    .navbar-toggle {
-        margin: 15px;
-        padding: 19px 15px;
-        border: 0px;
-        background-color: var(--green);
-        border-radius: 0;
-    }
-
-    .navbar-default .navbar-toggle .icon-bar {
-        background-color: #fff;
-    }
-
-    .navbar-collapse.collapse {
-        display: none !important;
-        height: 100% !important;
-    }
-
-    .navbar-collapse.collapse.in {
-        transition: 1s all ease;
-        display: block !important;
-        right: 0;
-        position: fixed;
-        z-index: 9999;
-        background-color: var(--green);
-        top: 80px;
-    }
-
-    .collapsing {
-        transition: 1s all ease;
-        overflow: hidden !important;
-        right: -300px;
-        position: absolute;
-    }
-
-    .navbar-nav {
-        float: none !important;
-        margin: 7.5px 15px;
-    }
-
-    .navbar-nav>li {
-        float: none;
-    }
-
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-
-    .navbar-brand {
-        height: 60px;
-    }
-
-    .navbar-brand img {
-        position: static;
-    }
-
-    .contactanos {
-        transform: none !important;
-        padding: 0;
-    }
-
-    .navbar-collapse {
-        padding: 0 !important;
-    }
-
-    .navbar-collapse ul {
-    	background-color: var(--green);
-    	height: 90vh;
-    }
-
-    .navbar {
-        overflow: visible !important;
-    }
-
-    .navbar-default .navbar-nav>li>a {
-        color: #fff !important;
-    }
-
-    .navbar-fixed-top .navbar-collapse {
-        max-height: 100% !important;
-    }
-
-    .navbar-default .navbar-nav>li>a:focus,
-    .navbar-default .navbar-nav>li>a:hover {
-        background-color: rgba(0, 0, 0, .5) !important;
-        color: #FFF;
-    }
-
-    .collapse ul {
-        margin: 10px 0 !important;
-    }
-
-    .navbar-default .navbar-nav>.active>a,
-    .navbar-default .navbar-nav>.active>a:focus,
-    .navbar-default .navbar-nav>.active>a:hover {
-        background-color: rgba(0, 0, 0, .5) !important;
-        color: #FFF;
-        font-weight: bold;
-    }
-
-    .contactanos p,
-    .contactanos h4,
-    .contactanos img {
-        transform: none !important;
-    }
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar-default .navbar-toggle:focus,
@@ -179,7 +51,7 @@ a:active {
 }
 
 .collapse ul {
-    margin: 10px 0;
+    margin: 10px ;
 }
 
 .navbar-default .navbar-nav>li {
@@ -201,10 +73,6 @@ a:active {
     color: #000;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-}
-
 .btn-green {
     border-radius: 4px;
     background-color: var(--green);
@@ -212,13 +80,7 @@ body {
 }
 
 nav {
-    /*background-image: linear-gradient(129deg, #71b91f 0%, #478925 100%);*/
-    /*background-color: var(--light-green);*/
     filter: drop-shadow(0 0 22.5px rgba(0, 0, 0, 0.3));
-    /*overflow: hidden;*/
-    /*box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;
-	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;
-	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ;*/
 }
 
 .nav__content {
@@ -302,6 +164,139 @@ nav {
     font-size: 1.2rem;
 }
 
+@media (max-width: 350px) {
+    .navbar-brand {
+        width: 150px;
+    }
+}
+
+@media (max-width: 992px) {
+    .navbar-brand {
+        margin-bottom: 0;
+    }
+
+    .navbar-header {
+        float: none;
+        /*border-bottom: 0px solid #002ba6;*/
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-toggle {
+        margin: 15px;
+        padding: 19px 15px;
+        border: 0px;
+        background-color: var(--green);
+        border-radius: 0;
+    }
+
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: #fff;
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important;
+        height: 100% !important;
+    }
+
+    .navbar-collapse.collapse.in {
+        overflow: visible;
+        transition: 1s all ease;
+        display: block !important;
+        right: 0;
+        position: fixed;
+        z-index: 9999;
+        background-color: var(--green);
+        top: 80px;
+    }
+
+    .collapsing {
+        transition: 1s all ease;
+        overflow: hidden !important;
+        right: -300px;
+        position: absolute;
+    }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 0;
+    }
+
+    .navbar-nav>li {
+        float: none;
+    }
+
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+
+    .navbar-brand {
+        height: 60px;
+    }
+
+    .navbar-brand img {
+        position: static;
+    }
+
+    .contactanos {
+        transform: none !important;
+        padding: 0;
+    }
+
+    .navbar-collapse {
+        padding: 0 !important;
+    }
+
+    .navbar-collapse ul {
+        background-color: var(--green);
+        height: 90vh;
+    }
+
+    .navbar {
+        overflow: visible !important;
+    }
+
+    .navbar-default .navbar-nav>li>a {
+        color: #fff !important;
+    }
+
+    .navbar-fixed-top .navbar-collapse {
+        max-height: 100% !important;
+    }
+
+    .navbar-default .navbar-nav>li>a:focus,
+    .navbar-default .navbar-nav>li>a:hover {
+        background-color: rgba(0, 0, 0, .5) !important;
+        color: #FFF;
+    }
+
+    .collapse ul {
+        margin: 0 !important;
+    }
+
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>.active>a:focus,
+    .navbar-default .navbar-nav>.active>a:hover {
+        background-color: rgba(0, 0, 0, .5) !important;
+        color: #FFF;
+        font-weight: bold;
+    }
+
+    .contactanos p,
+    .contactanos h4,
+    .contactanos img {
+        transform: none !important;
+    }
+}
+
 
 /*________________________________________*/
 .section__hero {
@@ -334,7 +329,7 @@ nav {
     background-color: var(--green);
     background-blend-mode: soft-light;
     background-repeat: no-repeat;
-    background-position: -400px 40px;
+    background-position: -350px 40px;
     background-size: cover;
 }
 
@@ -419,11 +414,8 @@ nav {
         transform: none;
     }
 }
-@media (max-width: px)
 
 
-
-/*______________________________*/
 .articles {
     overflow: hidden;
 }
